# qbittorrent-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP.md  config.example.yaml  pyproject.toml  requirements.txt
qbittorrent_sync/: __init__.py  __main__.py  cli.py  config.py  sync.py
